--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,9 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+
+
+	
 	<h3>Sep. 23</h3> <br>
 <strong>Class 9, Wednesday</strong><br>
 • Lab time for our second assignment. <br>
@@ -119,10 +122,10 @@ p    {color: black;}
 • Open discussion of the posters. <br><br>
  
 		<b>Due Monday</b><br>
-• Final poster design as a jpg uploaded to your GitHub. <br>
+• Final poster design as a jpg uploaded to your GitHub. 
+• Check out new resources on the Resources page. Look at HTML math symbols, and at the fix for a dimmed font display on Safari.<br>
 
 <br><br>
-	</p>
 	
 	
 	
