--- a/calendar.html
+++ b/calendar.html
@@ -122,7 +122,7 @@ p    {color: black;}
 • Open discussion of the posters. <br><br>
  
 		<b>Due Monday</b><br>
-• Final poster design as a jpg uploaded to your GitHub. 
+• Final poster design as a jpg uploaded to your GitHub. <br>
 • Check out new resources on the Resources page. Look at HTML math symbols, and at the fix for a dimmed font display on Safari.<br>
 
 <br><br>
