--- a/resources.html
+++ b/resources.html
@@ -119,6 +119,16 @@ p    {color: black;}
 <h2><a href="https://www.toptal.com/designers/htmlarrows/math/" target="_blank">HTML Math Symbols</a><br>
 </p>	
 	
+	<div class="lineup"></div>	
+	
+<p>
+<h2><a href="https://99designs.com/blog/design-history-movements/swiss-design/" target="_blank">What is Swiss Design, Anyway?</a><br>
+</p>	
+	
+	
+	
+	
+	
 	
 	<div class="lineup"></div>	
 	
@@ -126,6 +136,8 @@ p    {color: black;}
 <h2>Fix for Safari browser display font dimming. In the CSS of your code, inside the Display property where you specify font color, put in this line of code: <br>
 -webkit-text-fill-color: #000;  <br>
 </p>		
+	
+	
 	
 	
 	
