--- a/calendar.html
+++ b/calendar.html
@@ -123,7 +123,10 @@ p    {color: black;}
  
 		<b>Due Monday</b><br>
 • Final poster design as a jpg uploaded to your GitHub. <br>
-• Check out new resources on the Resources page. Look at HTML math symbols, and at the fix for a dimmed font display on Safari.<br>
+• Check out new resources on the Resources page:<br>
+1. HTML math symbols: ways to properly specify multiply, divide, etc,<br>
+2. Fix for a dimmed font display on Safari.<br>
+3. What is Swiss Design, Anyway – a great article on the history of Swiss Design<br><br>
 
 <br><br>
 	
