--- a/calendar.html
+++ b/calendar.html
@@ -113,6 +113,20 @@ p    {color: black;}
 	
 	
 
+	
+	<h3>Sep. 28</h3> <br>
+<strong>Class 10, Monday</strong><br>
+• Part 2 of Calculator crit. <br>
+• Discussion of Swiss design, example from our resources.<br><br>
+• Review of new resources: HTML math symbols. <br>	
+• DreamWeaver lab: responsive web. <br><br>
+ 
+		<b>Due Wednesday</b><br>
+• Updated poster design jpg on your GitHub - including mobile view. <br>
+<br><br>
+	
+	
+	<div class="lineup"></div>	
 
 	
 	<h3>Sep. 23</h3> <br>
