--- a/calendar.html
+++ b/calendar.html
@@ -112,7 +112,20 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
-
+	<h3>Sep. 30</h3> <br>
+<strong>Class 11, Wednesday</strong><br>
+• Quick discussion of going from your sketch to programming. <br>
+• Questions of the day for breakout rooms:<br>
+what's your dream job or internship?<br>
+What studio work do you love? <br>
+• Lab for programming and breakout discussions of progress. <br><br>
+ 
+		<b>Due Monday</b><br>
+• Programmed version of your page, not including mobile.<br>
+<br><br>	
+	
+	
+	<div class="lineup"></div>	
 	
 	<h3>Sep. 28</h3> <br>
 <strong>Class 10, Monday</strong><br>
