--- a/resources.html
+++ b/resources.html
@@ -115,6 +115,34 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+	
+	
+<p>
+<h2><a href="https://css-tricks.com/the-shapes-of-css/" target="_blank">The Shapes of CSS</a><br>
+</p>	
+	
+
+	<div class="lineup"></div>
+<p>
+<h2><a href="http://apps.eky.hk/css-triangle-generator/" target="_blank">CSS Triangle Generator</a><br>
+</p>	
+	
+	
+		<div class="lineup"></div>
+<p>
+<h2><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/percentage" target="_blank">Working with Percentages and fluid grids</a><br>
+</p>	
+	
+	
+<div class="lineup"></div>
+<p>
+<h2><a href="https://www.interaction-design.org/literature/article/repetition-pattern-and-rhythm" target="_blank">Repetition, Pattern and Rhythm</a><br>
+</p>	
+	
+	
+	
+	
+	<div class="lineup"></div>	
 <p>
 <h2><a href="https://www.toptal.com/designers/htmlarrows/math/" target="_blank">HTML Math Symbols</a><br>
 </p>	
