--- a/calendar.html
+++ b/calendar.html
@@ -112,7 +112,22 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
-	<h3>Sep. 30</h3> <br>
+	<h3>Oct. 05</h3> <br>
+<strong>Class 12, Monday</strong><br>
+• New class resources presentation. <br>
+• Using Repetition, Patterns, and Rhythm. <br>
+• The shapes of CSS: a triangle generator and shape overview.<br>
+• Breakouts to look at programming progress. <br><br>
+ 
+		<b>Due Wednesday</b><br>
+• Finished version of your poster, including one mobile breakpoint.<br>
+<br><br>	
+	
+	
+	
+	<div class="lineup"></div>	
+	
+		<h3>Sep. 30</h3> <br>
 <strong>Class 11, Wednesday</strong><br>
 • Quick discussion of going from your sketch to programming. <br>
 • Questions of the day for breakout rooms:<br>
