--- a/resources.html
+++ b/resources.html
@@ -121,6 +121,7 @@ p    {color: black;}
 <h2><a href="https://css-tricks.com/the-shapes-of-css/" target="_blank">The Shapes of CSS</a><br>
 </p>	
 	
+	
 
 	<div class="lineup"></div>
 <p>
@@ -140,6 +141,10 @@ p    {color: black;}
 </p>	
 	
 	
+			<div class="lineup"></div>
+<p>
+<h2><a href="https://www.w3schools.com/howto/howto_js_toggle_hide_show.asp" target="_blank">Toggle Element Visibility with CSS and JavaScript</a><br>
+</p>
 	
 	
 	<div class="lineup"></div>	
