--- a/calendar.html
+++ b/calendar.html
@@ -116,6 +116,7 @@ p    {color: black;}
 <strong>Class 12, Monday</strong><br>
 • New class resources presentation. <br>
 • Using Repetition, Patterns, and Rhythm. <br>
+• Hide and show divs with simple JavaScript<br>
 • The shapes of CSS: a triangle generator and shape overview.<br>
 • Breakouts to look at programming progress. <br><br>
  
