--- a/calendar.html
+++ b/calendar.html
@@ -110,6 +110,20 @@ p    {color: black;}
 <h1>Calendar</h1>
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
+
+	<h3>Oct. 07</h3> <br>
+<strong>Class 13, Wednesday</strong><br>
+• Lab for uploading posters and any final questions. <br>
+• Crit of progress on the posters.  <br>
+ 
+		<b>Due Monday</b><br>
+• Finished version of your poster, including one mobile breakpoint.<br>
+• Additional version of your poster with at least one changed CSS element inspired by a studio or designer of your choice.<br>
+<br><br>	
+	
+	
+	<div class="lineup"></div>	
+
 	
 	
 	<h3>Oct. 05</h3> <br>
