--- a/calendar.html
+++ b/calendar.html
@@ -111,6 +111,20 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 
+	
+		<h3>Oct. 12</h3> <br>
+<strong>Class 14, Monday</strong><br>
+• Class overview of remaining digital posters.  <br>
+• Intro to project 3 – The HTML Portrait.  <br>
+ 
+		<b>Due Wednesday</b><br>
+• Choose a reference picture of yourself to start drawing a self-portrait in Illustrator.<br>
+<br><br>	
+	
+	
+	<div class="lineup"></div>	
+
+	
 	<h3>Oct. 07</h3> <br>
 <strong>Class 13, Wednesday</strong><br>
 • Lab for uploading posters and any final questions. <br>
