--- a/projects.html
+++ b/projects.html
@@ -401,12 +401,55 @@ We will code a simple calculator using HTML and Javascript in class. We will the
 
 	<div class="lineup"></div>
 <p>
-<h2>Project 3 – The HTML Portrait</h2><br>	
-	- We will create a self-portrait using only HTML elements with CSS Styling.<br>
-<br>
+<h2>Project 3 – The HTML Portrait</h2><br>
+	
+	<div class="mainHolder">
+		
+		
+		
+				<div class="earRight"></div>
+<div class="earLeft"></div>
+	<div class="beard"></div>
+				<div class="trapezoid"></div>
+
+	<div class="moon"></div>
+		<div class="floatingCircle"></div>
+		<div class="nose"></div>
+		<div class="noseCover1"></div>
+		<div class="noseCover2"></div>
+		<div class="noseCover3"></div>
+
+	<div class="bridge"></div>
+	
+		<div class="bridge-cover"></div>
+
+		<div class="glassLeft"></div>
+		<div class="glassRight"></div>
+				<div class="eyeLeft"></div>
+<div class="eyeRight"></div>
+	
+		<div class="hairOne"></div>
+		<div class="mouth"></div>
+				<div class="triangleOne"></div>
+<div class="triangleTwo"></div>
+<div class="triangleThree"></div>
+</div>
+	
+	
+	
+	
+	<i>Self-portrat illustration by Robert M. Kerr. Rendered in HTML and CSS.</i><br><br>
+• Choose a portrait you took which focuses on the face.<br>
+• This can be a self-portrait, a photo of someone else, or a photo of a pet.<br>
+• In Illustrator, create two drawings of the portrait using geometric shapes. Grayscale only. <br>
+• Start with an artboard that is sized to your screen. Change Illustrator preferences to work with pixels. <br>
+• The drawing should be minimal and convey emotion (ex. Apple Animojis). <br>
+• Consider the types of shapes you can create in HTML – rectangles, circles, ovals and triangles. <br>
+• Once your drawing is approved, recreate it using only DIVs in HTML. <br>
+• Use DIVs position absolute, and start with the drawing aligning to the top and left of your browser. <br>
 
 <br>
-</p>		
+</p>			
 	
 
 	<div class="lineup"></div>
