--- a/projects.html
+++ b/projects.html
@@ -440,9 +440,9 @@ We will code a simple calculator using HTML and Javascript in class. We will the
 	
 	<i>Self-portrat illustration by Robert M. Kerr. Rendered in HTML and CSS.</i><br><br>
 • Choose a portrait you took which focuses on the face.<br>
-• This can be a self-portrait, a photo of someone else, or a photo of a pet.<br>
 • In Illustrator, create two drawings of the portrait using geometric shapes. Grayscale only. <br>
-• Start with an artboard that is sized to your screen. Change Illustrator preferences to work with pixels. <br>
+• Change Illustrator preferences to work with pixels. <br>
+• Work with an artboard that is 1920px by 1080px.<br>
 • The drawing should be minimal and convey emotion (ex. Apple Animojis). <br>
 • Consider the types of shapes you can create in HTML – rectangles, circles, ovals and triangles. <br>
 • Once your drawing is approved, recreate it using only DIVs in HTML. <br>
