--- a/calendar.html
+++ b/calendar.html
@@ -115,10 +115,11 @@ p    {color: black;}
 		<h3>Oct. 12</h3> <br>
 <strong>Class 14, Monday</strong><br>
 • Class overview of remaining digital posters.  <br>
-• Intro to project 3 – The HTML Portrait.  <br>
+• Intro to project 3 – The HTML Portrait.  <br><br>
  
 		<b>Due Wednesday</b><br>
-• Choose a reference picture of yourself to start drawing a self-portrait in Illustrator.<br>
+• You should be in the process of drawing your portrait in Illustrator.<br>
+• Your posters will be graded on Wednesday, so please upload any changes or additions by this time.<br>
 <br><br>	
 	
 	
