--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,25 @@ p    {color: black;}
 <div class="leftcolumn">
 
 	
+		<h3>Oct. 14</h3> <br>
+<strong>Class 15, Wednesday</strong><br><br><br>
+	<div style="background-color:#ff4b2e;color:white;padding:20px;border-style: solid">
+<strong>Mid-term Announcement</strong><br><br>
+• We will have a mid-term on Wednesday, October 21st, due before the end of class.<br>
+• The in-class exercise will consist of design and basic coding.<br>
+• You will be able to reference the internet and all your previous exercises.</div><br><br>
+• Guided instruction on file set up in Illustrator - working in pixels and artboards, exporting.<br>
+• Examples of HTML portraits from the previous class. <br> 
+• Breakout rooms of 4-5 students to review ideas on the self-portrait illustration. <br> 
+ <br>
+		<b>Due Monday</b><br>
+• A jpg of your two portraits uploaded to GitHub.<br>
+<br><br>
+	
+	
+	<div class="lineup"></div>	
+
+	
 		<h3>Oct. 12</h3> <br>
 <strong>Class 14, Monday</strong><br>
 • Class overview of remaining digital posters.  <br>
