--- a/projects.html
+++ b/projects.html
@@ -379,27 +379,20 @@ p    {color: black;}
 <p>	
 	
 	
-	
-<h2>Project 1 – HTML Calculator</h2><br>
-We will code a simple calculator using HTML and Javascript in class. We will then add CSS code to style the calculator. The calculator will be styled using CSS with the following considerations: <br><br>
-• Functionality – how does it work?<br>
-• User experience – how will a user interact with it?<br>
-• User Familiarity – how do calculators usually look? <br>
-• Aesthetics – does the style add or detract from the function? <br>
-<br>
-<br><br>
-</p>
-	
-		<div class="lineup"></div>
 <p>
-<h2>Project 2 – Information Architecture</h2><br>
-- We will create a responsive web-based poster.<br>
+<h2>Project 4 – Mid Term</h2><br>	
+	• The mid-term will take place on Wednesday, October 21st, and will be due before the end of class.<br>
+	• Specifics will be posted in class and here on this website. <br>
+<br>
+
 <br>
 </p>	
 	
 	
-
-	<div class="lineup"></div>
+	
+	
+	
+<div class="lineup"></div>
 <p>
 <h2>Project 3 – The HTML Portrait</h2><br>
 	
@@ -450,31 +443,39 @@ We will code a simple calculator using HTML and Javascript in class. We will the
 
 <br>
 </p>			
+		
+	
+	
 	
 
-	<div class="lineup"></div>
-<p>
-<h2>Project 4 – Mid Term</h2><br>	
-	- TBA closer to the date.<br>
-<br>
-
-<br>
-</p>	
-	
-
-
-<div class="lineup"></div>
-<p>
-<h2>Project 5 – Final Project</h2><br>	
-	- To be discussed with each student at a later date.<br>
-<br>
+	<p>
+<h2>Project 2 – Information Architecture</h2><br>
+• We will discuss Dieter Rams and his 10 principles of design. <br>
+• We will look at how these principles apply to your work and write an essay responding to each of his points.<br>
+• We will create a responsive web-based poster based on your essay.<br>
+• This poster will have at least one break-point for smaller screens.<br>
+• Lastly, we will create a copy of the design and adjust the CSS styling based on the work of any chosen designer or studio. 
 
 <br>
 </p>	
 	
+			<div class="lineup"></div>
 
 	
+<h2>Project 1 – HTML Calculator</h2><br>
+We will code a simple calculator using HTML and Javascript in class. We will then add CSS code to style the calculator. The calculator will be styled using CSS with the following considerations: <br><br>
+• Functionality – how does it work?<br>
+• User experience – how will a user interact with it?<br>
+• User Familiarity – how do calculators usually look? <br>
+• Aesthetics – does the style add or detract from the function? <br>
+• The calculator will be styled in two ways: one freeform, and one focusing on the work of a designer.<br>
+<br>
+<br><br>
+</p>
+	
 
+
+	
 	
 
 
