--- a/projects.html
+++ b/projects.html
@@ -455,7 +455,7 @@ p    {color: black;}
 • We will look at how these principles apply to your work and write an essay responding to each of his points.<br>
 • We will create a responsive web-based poster based on your essay.<br>
 • This poster will have at least one break-point for smaller screens.<br>
-• Lastly, we will create a copy of the design and adjust the CSS styling based on the work of any chosen designer or studio. 
+• Lastly, we will create a copy of the design and adjust the CSS styling based on the work of any chosen designer or studio. <br>
 
 <br>
 </p>	
