--- a/calendar.html
+++ b/calendar.html
@@ -110,7 +110,27 @@ p    {color: black;}
 <h1>Calendar</h1>
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
-
+	
+	
+			<h3>Oct. 19</h3> <br>
+<strong>Class 16, Monday</strong><br><br><br>
+<strong>Mid-term Announcement</strong><br><br>
+• Quick time to upload final JPGs of your portrait to GitHub.<br>
+• Remember to update a link on your index page.<br>
+• We will go through these and pick the final for you to program.<br><br>
+• Basic animation wtih CSS and HTML.<br>
+• Here is an <a href="portrait.html">example</a> of a portrait with animation. <br> 
+• Breakouts to take a look at progress. <br> 
+ <br>
+		<b>Wednesday</b><br>
+• We will be having a mid-term exercise due at the end of class.<br>
+<br><br>
+	
+	
+	
+	
+	
+<div class="lineup"></div>	
 	
 		<h3>Oct. 14</h3> <br>
 <strong>Class 15, Wednesday</strong><br><br><br>
