--- a/calendar.html
+++ b/calendar.html
@@ -113,8 +113,7 @@ p    {color: black;}
 	
 	
 			<h3>Oct. 19</h3> <br>
-<strong>Class 16, Monday</strong><br><br><br>
-<strong>Mid-term Announcement</strong><br><br>
+<strong>Class 16, Monday</strong><br><br>
 • Quick time to upload final JPGs of your portrait to GitHub.<br>
 • Remember to update a link on your index page.<br>
 • We will go through these and pick the final for you to program.<br><br>
