--- a/resources.html
+++ b/resources.html
@@ -127,9 +127,12 @@ p    {color: black;}
 <h2><a href="https://codepen.io/AssiaChemlali/pen/NLyPGK" target="_blank">Crescent / moon shapes in CSS.</a><br>
 </p>	
 
+	<div class="lineup"></div>
+<p>
+<h2><a href="https://css-tricks.com/how-to-create-a-realistic-motion-blur-with-css-transitions/	" target="_blank">Motion blur in CSS.</a><br>
+</p>		
 	
-	
-	
+
 	
 	
 	<div class="lineup"></div>
