--- a/calendar.html
+++ b/calendar.html
@@ -111,7 +111,29 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+			<h3>Oct. 21</h3> <br>
+<strong>Class 17, Wednesday – Mid Term!</strong><br><br>
+<strong>Create and upload a new design for your home page using CSS.</strong><br>
+<br>
+Keep in mind the following considerations:<br>
+1. Remove all moodboards, and any pages with images gathered from the web. <br>
+2. Use at least one roll-over transition.<br>
+3. To review transitions, reference this resource: <a href="https://www.w3schools.com/css/css3_transitions.asp">https://www.w3schools.com/css/css3_transitions.asp</a><br>
+4. Organize your projects by grouping links in a way that makes sense.<br>
+5. Make sure your project links are visible above the fold, so without any scrolling on the page.<br>
+6. Below your projects, create an About Me section. This is open to your interpretation and can contain text or shapes.<br>
+7. Do not use any jpgs on the home page. You can use text, shapes, and colors.<br>
+8. Infuse your personal style to your home page, but keep it legible and accessible.<br>
+9. <strong>Upload your design to GitHub before 6.40pm.</strong> It should be the "index.html" file on your GitHub account.<br>
+10. You are free to leave the class zoom after you complete and upload your page.<br>
+<br><br>
+		
 	
+	
+	
+	
+	
+	<div class="lineup"></div>	
 			<h3>Oct. 19</h3> <br>
 <strong>Class 16, Monday</strong><br><br>
 • Quick time to upload final JPGs of your portrait to GitHub.<br>
