--- a/projects.html
+++ b/projects.html
@@ -382,7 +382,7 @@ p    {color: black;}
 <p>
 <h2>Project 4 – Mid Term</h2><br>	
 	• The mid-term will take place on Wednesday, October 21st, and will be due before the end of class.<br>
-	• Specifics will be posted in class and here on this website. <br>
+	• We will be designing your GitHub home page by adding CSS styling. <br>
 <br>
 
 <br>
@@ -427,7 +427,6 @@ p    {color: black;}
 <div class="triangleTwo"></div>
 <div class="triangleThree"></div>
 </div>
-	
 	
 	
 	
