--- a/resources.html
+++ b/resources.html
@@ -118,6 +118,12 @@ p    {color: black;}
 	
 	
 <p>
+<h2><a href="https://www.fastcompany.com/90566212/nycs-new-subway-tool-settles-the-biggest-debate-in-maps" target="_blank">NYC's new subway map – Fast Company Article</a><br>
+</p>		
+	
+	
+	<div class="lineup"></div>
+<p>
 <h2><a href="https://css-tricks.com/the-shapes-of-css/" target="_blank">The Shapes of CSS</a><br>
 </p>	
 	
