--- a/calendar.html
+++ b/calendar.html
@@ -111,6 +111,20 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+				<h3>Oct. 28</h3> <br>
+<strong>Class 19, Wednesday</strong><br><br>
+<br>
+• Presentation of animation applications on the web.<br>
+• First part of class is a lab to work on the programming of your portraits. <br>
+• Later, we will break to look at progress from a vounteers – with extra credit to the first 5 volunteers. <br>
+• You can share screen and show progress. <br>
+<br>
+<strong>For Monday:</strong><br>
+• Finish and update your portrait animation and upload to GitHub. 
+<br><br>
+	<br><br>
+	
+	<div class="lineup"></div>	
 			<h3>Oct. 26</h3> <br>
 <strong>Class 18, Monday</strong><br><br>
 <br>
