--- a/calendar.html
+++ b/calendar.html
@@ -120,7 +120,10 @@ p    {color: black;}
 • You can share screen and show progress. <br>
 <br>
 <strong>For Monday:</strong><br>
-• Finish and update your portrait animation and upload to GitHub. 
+• Finish and update your portrait animation and upload to GitHub. <br>
+• Upload your final portrait as your zoom image:<br>
+1. Export a square JPG of your final portrait with color. <br>
+2. In Zoom, click on zoom.us in the upper left hand menu, and go to Profile, and click on the image. 
 <br><br>
 	<br><br>
 	
