--- a/calendar.html
+++ b/calendar.html
@@ -111,6 +111,24 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+	
+					<h3>Nov. 02</h3> <br>
+<strong>Class 20, Monday</strong><br><br>
+<br>
+• Zoom etiquette: let's turn on our cameras for critiques and breakout rooms.<br>
+• Upload your final portrait as your zoom image if you haven't done so yet.<br>
+• Remaining portrait critiques. <br>
+• Lecture and intro to the final project: National Parks. <br>
+• Selection of your final topic and lab. <br>
+<br>
+<strong>For Wednesday:</strong><br>
+• Have ready two Hand-draw high-fidelity wires for your poster. <br>
+<br><br>
+	<br><br>
+	
+	
+	
+		<div class="lineup"></div>	
 				<h3>Oct. 28</h3> <br>
 <strong>Class 19, Wednesday</strong><br><br>
 <br>
