--- a/calendar.html
+++ b/calendar.html
@@ -123,6 +123,8 @@ p    {color: black;}
 <br>
 <strong>For Wednesday:</strong><br>
 • Have ready two Hand-draw high-fidelity wires for your poster. <br>
+• Include: Park Name, Location, Longitude and Latitude Numbers, Established Date, 5 Activities.<br>
+• Check the <a href="https://en.m.wikipedia.org/wiki/List_of_national_parks_of_the_United_States" target="_blank">Wikipedia site</a> for info.
 <br><br>
 	<br><br>
 	
