--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,26 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+	
+	
+					<h3>Nov. 04</h3> <br>
+<strong>Class 21, Wednesday</strong><br><br>
+<br>
+• Lab and check-ins with groups on progress of your poster.<br>
+• Let's turn on cameras for the smaller check-ins.<br>
+• For your check-in, we will be looking at your two drawings and picking a direction. <br>
+• Grab a picture of your drawings with a phone so we can look at it as you share your screen. <br>
+• Start creating a color palette, finding font choices and general concept based on your park. <br>
+<br>
+<strong>For Monday:</strong><br>
+• Please upload a jpg of your poster design progress to your GitHub page. <br>
+• Include: Park Name, Location, Longitude and Latitude Numbers, Established Date, 5 Activities.<br>
+• Remember to use the grid we developed in Illustrator to organize your information. <br>
+<br><br>
+	<br><br>
+	
+	
+		<div class="lineup"></div>	
 					<h3>Nov. 02</h3> <br>
 <strong>Class 20, Monday</strong><br><br>
 <br>
