--- a/calendar.html
+++ b/calendar.html
@@ -113,7 +113,25 @@ p    {color: black;}
 	
 	
 	
+						<h3>Nov. 09</h3> <br>
+<strong>Class 22, Monday</strong><br><br>
+<br>
+• Class portrait – upload your portrait if you haven't done so already.<br>
+• We'll also turn on cameras for a real portrait and a crit.<br>
+• Check-in on poster progress. Make sure you have a JPG of your progress uploaded to your GitHub – we will have lead critiquers for each work. <br>
+• Discussion of animation techniques and best practices with examples. <br>
+<br>
+<strong>For Wednesday:</strong><br>
+• Update your poster based on today's critiques. <br>
+• Create a hand-drawn storyboard for your animation.<br>
+• Your poster animation should be short (think three seconds) and loop infinitely. <br>
+• We will animate in AfterEffects. We will go over a few techniques on Wednesday.<br>
+<br><br>
+	<br><br>
 	
+	
+	
+	<div class="lineup"></div>	
 					<h3>Nov. 04</h3> <br>
 <strong>Class 21, Wednesday</strong><br><br>
 <br>
