--- a/projects.html
+++ b/projects.html
@@ -377,8 +377,18 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>	
+	<p>
+<h2>Project 5 – National Parks</h2><br>	
+	• We will develop a poster about a National Park based on the Unigrid created by Massimo Vignelli.<br>
+	• Next, we will create a short looped animation for the poster. <br>
+	• Using the established art direction, each participant will create a micro-site to present more information and create a linked system to explore other parks. <br>
+<br>
+
+<br>
+</p>	
+
 	
-	
+	<div class="lineup"></div>
 <p>
 <h2>Project 4 – Mid Term</h2><br>	
 	• The mid-term will take place on Wednesday, October 21st, and will be due before the end of class.<br>
