--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,44 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+						<h3>Nov. 11</h3> <br>
+<strong>Class 23, Wednesday</strong><br><br>
+<br>
+• New Resoruce: <a href="https://youtu.be/HuwrGxCgZVc" target="_blank">watch the interview</a> with Tracy Ma from The New York Times. Let's watch this after the presentation so we can chat about it in breakouts.<br>
+	
+		<br>
+• A few examples of animated posters:<br>
+	<a href="https://www.expedia.co.uk/vc/c/festival-travel-posters/" target="_blank">Expedia posters</a> <br>
+	<a href="https://www.behance.net/gallery/57130687/Animated-Travel-Posters" target="_blank">Travel Poster Series on Behance</a> <br>
+	<a href="https://www.fusedmagazine.co.uk/nostalgic-travel-posters/" target="_blank">Fused Magazine Posters</a>	<br>
+	<br>
+• Presentation and Technical Follow-along: AfterEffects, Illustrator, and the Pin Tool.<br>
+	<br>
+• Reference these tutorials for more info or a refresher as you work:<br>
+	
+	<a href="https://vimeo.com/blog/post/designing-illustrator-for-after-effects-animation/" target="_blank">Illustrator to After Effects best practices</a><br>
+	
+	<a href="https://youtu.be/XhD93-ZA7vc" target="_blank">Puppet Pin Tool Tutorial</a><br>
+	
+	<a href="https://vimeo.com/blog/post/basic-masking-in-after-effects/" target="_blank">Basic masking in After Effects</a><br>
+	
+	
+<a href="https://motionarray.com/tutorials/after-effects-tutorials/how-to/how-to-animate-liquid-in-after-effects" target="_blank">Animated Liquid Tutorial</a> <br>
+<a href="https://motionarray.com/tutorials/after-effects-tutorials/how-to/how-to-create-animated-fire-in-after-effects" target="_blank">Animated Fire Tutorial</a><br><br>
+
+• Lab with smaller-group check-ins on your design and animation plan (remember to turn on cameras).<br>
+<br>
+<strong>For Monday:</strong><br>
+• Your poster should be in a finished state in class today. <br>
+• You should be working in AfterEffects on your animation. We will review the final posters on Wednesday.<br>
+• Target is 3 seconds, with the dimensions being 1224px x 793px.<br>
+<br><br>
+	<br><br>	
+	
+	
+	
+	<div class="lineup"></div>	
+	
 	
 						<h3>Nov. 09</h3> <br>
 <strong>Class 22, Monday</strong><br><br>
