--- a/resources.html
+++ b/resources.html
@@ -115,7 +115,12 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+	<p>
+<h2><a href="https://youtu.be/HuwrGxCgZVc" target="_blank">Interview with Tracy Ma, Visual Editor of the New York Times.</a><br>
+</p>
 	
+	
+<div class="lineup"></div>	
 <p>
 <h2><a href="https://www.nps.gov/subjects/hfc/a-brief-history-of-the-unigrid.htm" target="_blank">History of the Unigrid.</a><br>
 </p>	
