--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,25 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+		
+						<h3>Nov. 16</h3> <br>
+<strong>Class 24, Monday</strong><br><br>
+<br>
+• Introduction to frame-rate, looping, and exporting gifs for the web.<br>
+• Image swap, background images, pre-loading, and Vertical Browser Height - in class lab in DreamWeaver.<br>
+• Lab with one-on-one animation check-in.<br>
+<br><br>
+<strong>For Wednesday:</strong><br>
+• Upload your swap-image poster and animation to GitHub.<br>
+• The page should show your poster, and then swap the poster to an animated gif version on roll-over.<br>
+• Animated gif should be: 3-seconds, with the dimensions being 1224px x 793px, looping infinitely.<br>
+	
+	
+<br><br>
+	
+<div class="lineup"></div>		
+	
+	
 						<h3>Nov. 11</h3> <br>
 <strong>Class 23, Wednesday</strong><br><br>
 <br>
