--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@ p    {color: black;}
 	
 	<div class="lineupmain"></div>
 <div class="leftcolumn">	
-
-
-	<div class="lineup"></div>
+	
+	
+	<img src="portrait.jpg" width="100%" alt="class portrait"/><br><br>
+<div class="lineup"></div>
 
 	
 <p>
