--- a/resources.html
+++ b/resources.html
@@ -114,7 +114,12 @@ p    {color: black;}
 <div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+	<p>
+<h2><a href="https://dixonandmoe.com/rellax/" target="_blank">Parallax Scroll.</a><br>
+</p>	
 	
+	
+<div class="lineup"></div>		
 	<p>
 <h2><a href="https://youtu.be/HuwrGxCgZVc" target="_blank">Interview with Tracy Ma, Visual Editor of the New York Times.</a><br>
 </p>
