--- a/calendar.html
+++ b/calendar.html
@@ -111,6 +111,34 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+	
+								<h3>Nov. 23</h3> <br>
+<strong>Class 26, Monday</strong><br><br>
+<br>
+• Intro to Parallax: new resource overview.<br>
+• Intro to Website design and SVG export in Illustrator.<br>
+• Final project change: no additional park advertisements.<br>
+• Examples of website design.<br>
+• Smaller group breakouts. <br>
+
+<br><br>
+<strong>For Wednesday:</strong><br>
+• Create a wireframe of your website (either hand-drawn or in Illustrator) incorporating the following elements:<br>
+1. The word “visit”, the park name and illustrative elements (this should extend to or below the fold)<br>
+2. Description of your park. Use the park website or Wikipedia to write a paragraph that describes the park in general (this should be around 400 words). <br>
+3. Date the area became a national park.<br>
+4. Five activities from your poster. Consider illustrating these or adding to the description. Do not use photographs on the site. <br>
+5. Longitude and longitude of the park location. <br>
+6. Total square mileage of the park.<br>
+7. Link to the nps.gov website.<br>
+8. Citation of sources you used to gather information about the park. <br>
+	
+	
+<br><br>
+	
+	
+	<div class="lineup"></div>	
+	
 							<h3>Nov. 18</h3> <br>
 <strong>Class 25, Wednesday</strong><br><br>
 <br>
