--- a/calendar.html
+++ b/calendar.html
@@ -111,7 +111,21 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+	<strong>Class 27, Wednesday</strong><br><br>
+<br>
+• Our last class!<br>
+• It will be a lab with individual reviews of your work.<br>
+
+
+<br><br>
+<strong>For Monday:</strong><br>
+• Final presentations will take place on Monday and Wednesday of next week.
+• Please attend both classes, even if we review your work on the first day. Provide feedback and support to your classmates. 
+		
+<br><br>
 	
+	
+		<div class="lineup"></div>	
 								<h3>Nov. 23</h3> <br>
 <strong>Class 26, Monday</strong><br><br>
 <br>
@@ -123,7 +137,7 @@ p    {color: black;}
 
 <br><br>
 <strong>For Wednesday:</strong><br>
-• Create a wireframe of your website (either hand-drawn or in Illustrator) incorporating the following elements:<br>
+• Reminder that your final site should have the following elements:<br>
 1. The word “visit”, the park name and illustrative elements (this should extend to or below the fold)<br>
 2. Description of your park. Use the park website or Wikipedia to write a paragraph that describes the park in general (this should be around 400 words). <br>
 3. Date the area became a national park.<br>
