--- a/calendar.html
+++ b/calendar.html
@@ -110,7 +110,7 @@ p    {color: black;}
 <h1>Calendar</h1>
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
-	
+	<h3>Nov. 25</h3> <br>
 	<strong>Class 27, Wednesday</strong><br><br>
 <br>
 • Our last class!<br>
