--- a/calendar.html
+++ b/calendar.html
@@ -119,8 +119,8 @@ p    {color: black;}
 
 <br><br>
 <strong>For Monday:</strong><br>
-• Final presentations will take place on Monday and Wednesday of next week.
-• Please attend both classes, even if we review your work on the first day. Provide feedback and support to your classmates. 
+• Final presentations will take place on Monday and Wednesday of next week.<br>
+• Please attend both classes, even if we review your work on the first day. Provide feedback and support to your classmates. <br>
 		
 <br><br>
 	
