--- a/calendar.html
+++ b/calendar.html
@@ -109,7 +109,32 @@ p    {color: black;}
 	
 <h1>Calendar</h1>
 	<div class="lineupmain"></div>
+	
+	
 <div class="leftcolumn">
+	<h3>Nov. 30 + Dec. 02</h3> <br>
+	<strong>Final Critiques, Monday and Wednesday</strong><br><br>
+<br>
+• Final presentation of two of your favorite projects from class.<br>
+• Each participant will share their screen to show their work.<br>
+• Since it is a critique, please turn on your cameras for the entire class.<br>
+• We will have guests give their input on your projects.<br>
+• Feel free to ask questions of the guests and your colleagues and keep it a casual conversation.<br>
+• Please comment on the work, even if just to say you like it.<br>
+• Please show up for both classes, even if we have already critiqued your work.<br>
+
+<br><br>
+<strong>For Wednesday:</strong><br>
+• Please fill out the teacher evaluation forms.<br>
+• Your responses will help with your future classes over zoom.<br>
+• The responses also help me improve or continue doing what works.<br>
+		
+<br><br>
+	
+	
+	
+	
+	<div class="lineup"></div>	
 	<h3>Nov. 25</h3> <br>
 	<strong>Class 27, Wednesday</strong><br><br>
 <br>
