--- a/projects.html
+++ b/projects.html
@@ -376,100 +376,9 @@ p    {color: black;}
 <h1>Projects</h1>
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
-<p>	
-	<p>
-<h2>Project 5 – National Parks</h2><br>	
-	• We will develop a poster about a National Park based on the Unigrid created by Massimo Vignelli.<br>
-	• Next, we will create a short looped animation for the poster. <br>
-	• Using the established art direction, each participant will create a micro-site to present more information and create a linked system to explore other parks. <br>
-<br>
-
-<br>
-</p>	
 
 	
-	<div class="lineup"></div>
-<p>
-<h2>Project 4 – Mid Term</h2><br>	
-	• The mid-term will take place on Wednesday, October 21st, and will be due before the end of class.<br>
-	• We will be designing your GitHub home page by adding CSS styling. <br>
-<br>
-
-<br>
-</p>	
-	
-	
-	
-	
-	
-<div class="lineup"></div>
-<p>
-<h2>Project 3 – The HTML Portrait</h2><br>
-	
-	<div class="mainHolder">
-		
-		
-		
-				<div class="earRight"></div>
-<div class="earLeft"></div>
-	<div class="beard"></div>
-				<div class="trapezoid"></div>
-
-	<div class="moon"></div>
-		<div class="floatingCircle"></div>
-		<div class="nose"></div>
-		<div class="noseCover1"></div>
-		<div class="noseCover2"></div>
-		<div class="noseCover3"></div>
-
-	<div class="bridge"></div>
-	
-		<div class="bridge-cover"></div>
-
-		<div class="glassLeft"></div>
-		<div class="glassRight"></div>
-				<div class="eyeLeft"></div>
-<div class="eyeRight"></div>
-	
-		<div class="hairOne"></div>
-		<div class="mouth"></div>
-				<div class="triangleOne"></div>
-<div class="triangleTwo"></div>
-<div class="triangleThree"></div>
-</div>
-	
-	
-	
-	<i>Self-portrat illustration by Robert M. Kerr. Rendered in HTML and CSS.</i><br><br>
-• Choose a portrait you took which focuses on the face.<br>
-• In Illustrator, create two drawings of the portrait using geometric shapes. Grayscale only. <br>
-• Change Illustrator preferences to work with pixels. <br>
-• Work with an artboard that is 1920px by 1080px.<br>
-• The drawing should be minimal and convey emotion (ex. Apple Animojis). <br>
-• Consider the types of shapes you can create in HTML – rectangles, circles, ovals and triangles. <br>
-• Once your drawing is approved, recreate it using only DIVs in HTML. <br>
-• Use DIVs position absolute, and start with the drawing aligning to the top and left of your browser. <br>
-
-<br>
-</p>			
-		
-	
-	
-	
-<div class="lineup"></div>
-
-	<p>
-<h2>Project 2 – Information Architecture</h2><br>
-• We will discuss Dieter Rams and his 10 principles of design. <br>
-• We will look at how these principles apply to your work and write an essay responding to each of his points.<br>
-• We will create a responsive web-based poster based on your essay.<br>
-• This poster will have at least one break-point for smaller screens.<br>
-• Lastly, we will create a copy of the design and adjust the CSS styling based on the work of any chosen designer or studio. <br>
-
-<br>
-</p>	
-	
-			<div class="lineup"></div>
+<!--			<div class="lineup"></div>-->
 
 	
 <h2>Project 1 – HTML Calculator</h2><br>
@@ -481,89 +390,18 @@ We will code a simple calculator using HTML and Javascript in class. We will the
 • The calculator will be styled in two ways: one freeform, and one focusing on the work of a designer.<br>
 <br>
 <br><br>
-</p>
-	
-
-
-	
-	
 
 
 </div>
 
 <div class="rightcolumn">
-<p>DES 350 / Fall, 2020<br>
+<p>DES 350 / Fall, 2021<br>
 Mondays + Wednesdays<br>
 Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a></p>
 
 <div class="lineup"></div>
 <p> <strong>Participants</strong><br>
-	<a href="https://japoli2.github.io/Apolinar/" target="_blank">Joanna Apolinar Cirilo </a> <br>
-
-<a href="https://mcrame4.github.io/DES350/" target="_blank">Mary Jane Cramer</a> <br>
-
-
-<a href="https://vdiaz24.github.io/DES350/" target="_blank">Viviana Diaz</a> <br>
-
-
-
-<a href="https://nermer2.github.io/DES350/" target="_blank">Nadia Ermer</a> <br>
-
-
-
-<a href="https://arigonzalez.github.io/DES350/" target="_blank">Ari Gonzalez</a> <br>
-
-
-<a href="https://kgotiwale.github.io/DES-350/" target="_blank">Kshitij Gotiwale</a> <br>
-
-
-
-<a href="https://fgozon2.github.io/DES350/" target="_blank">Faye Gozon</a> <br>
-
-
-<a href="https://hhensl2.github.io/DES350/" target="_blank">Haley Hensley</a> <br>
-
-
-
-<a href="https://thinds3.github.io/DES-350/" target="_blank">Tommy Hinds</a> <br>
-
-
-
-<a href="https://alhsieh2.github.io/DES350/" target="_blank">Ann Hsieh</a> <br>
-
-
-
-
-<a href="https://lphuynh9.github.io/DES350/" target="_blank">Linh Huynh</a> <br>
-
-
-<a href="https://ejaram4.github.io/DES350/" target="_blank">Erika Jaramillo</a> <br>
-
-
-
-<a href="https://maddielock17.github.io/DES350/" target="_blank">Maddie Lockwood</a> <br>
-
-
-
-<a href="https://slopez581.github.io/DES350/" target="_blank">Sebastian Lopez</a> <br>
-
-
-
-<a href="https://dortig2.github.io/DES350/" target="_blank">Daniel Ortigoza</a> <br>
-
-
-
-
-<a href="https://tpaws.github.io/DES350/" target="_blank">Victoria Pawlyk</a> <br>
-
-
-
-
-<a href="https://asoto29.github.io/DES350/" target="_blank">Antonio Soto</a> <br>
-
-
-
-<a href="https://elliespearman2022.github.io/DES350/index" target="_blank">Ellie Spearman</a> <br>	
+	TBD	
   <br>
 </p>
 </div>
