--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Our goals in this course are:<br>
 <div class="lineup"></div>
 <p>
 <h2>Best way to reach me and office hours</h2>
-You can email me at my UIC address: <a href="mailto:studiobema@gmail.com">mjanic3@uic.edu</a> <br><br>We will have opportunity during class to schedule one-on-one virtual meetings to discuss progress. <br><br>
+You can email me at my UIC address: <a href="mailto:studiobema@gmail.com">mjanic3@uic.edu</a> <br><br>We will have opportunity during class to schedule one-on-one meetings to discuss progress. <br><br>
 </p>
 
 
