--- a/calendar.html
+++ b/calendar.html
@@ -119,7 +119,25 @@ p    {color: black;}
 
 	
 <p>
-<h3>Aug. 23</h3> <br>
+<h3>Aug. 25</h3> <br>
+<strong>Class 2, Wednesday</strong><br>
+• Question of the day: what digital media relaxes you?<br>
+• Intro to HTML, Home Page<br>
+• GitHub Set Up<br>
+• Calculator HTML Programming<br>
+• Styling in CSS<br>
+	<br>
+	<strong>Before the end of class:</strong><br>
+1. Make sure I have your GitHub web address.<br>
+2. Ensure your home page shows up at that address.<br>
+3. Upload your calculator and link it on your Home Page.<br>
+<br>
+</p>
+	
+	<div class="lineup"></div>
+	
+	<p>
+<h3>Aug. 24</h3> <br>
 <strong>Class 1, Monday</strong><br>
 - Start of School! <br>
 - Go over syllabus <br>
